# Unifyt

./: ABBREVIATION_GUIDE.md  CHANGELOG.md  CONVERSION_GUIDE.md  QUICK_CONVERSION_REFERENCE.md  README.md  SOLUTION_SUMMARY.md  TESTING_GUIDE.md  TEST_FILES_README.md  professional_examples.py  pyproject.toml  run_excel_tests.py  setup.py  test_abbreviations.py  test_cases_template.csv  test_results.csv  test_unifyt.py
.github/workflows/: publish.yml
docs/: CHECKLIST.md  NEW_UNITS_v0.2.1.md  RPM_CLARIFICATION.md
examples/: distance.json  new_units_demo.py
final documents/: IMPLEMENTATION_COMPLETE.md  QUICK_START_NEW_UNITS.md  UNITS_ADDED_SUMMARY.md  UNIT_CONVERTERS_COMPLETE.md  YOUR_UNITS_COVERAGE.md
tests/: test_wire_gauge.py
unifyt/: __init__.py  quantity.py  unit.py  wire_gauge.py
unit-convertions-examples/: README.md  SHORTFORMS_REFERENCE.md  TEST_README.md  angular_velocity_converter.py  flow_rate_converter.py  paper_weight_converter.py  test.py  torque_converter.py  wire_gauge_converter.py
unit-convertions-examples/docs/: NEW_CONVERTERS_v0.2.1.md
