[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Unifyt"
version = "0.2.1"
description = "A powerful and easy-to-use Python library for unit conversion and calculations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Hadhi"}
]

dependencies = []

[project.urls]
Homepage = "https://github.com/MOHAMEDHADHI/Unifyt"
