[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Unifyt"
version = "0.2.6"
description = "A powerful and easy-to-use Python library for unit conversion and calculations."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Mohamed Hadhi" }
]

dependencies = [
    "numpy>=1.20"
]

keywords = ["unit conversion", "scientific computing", "units", "conversion"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/MOHAMEDHADHI/Unifyt"
Repository = "https://github.com/MOHAMEDHADHI/Unifyt"
Issues = "https://github.com/MOHAMEDHADHI/Unifyt/issues"
